Fix caption alignment for popup button menu items #PL-1995

--- a/modules/web/themes/havana/components/popupbutton/popupbutton.scss
+++ b/modules/web/themes/havana/components/popupbutton/popupbutton.scss
@@ -21,6 +21,7 @@
         margin-top: 0px;
 
         .v-button-caption {
+          vertical-align: text-top;
           color: #000;
           padding: 1px 3px;
           text-decoration: none;
